--- a/misitio/clases/templates/cliente.html
+++ b/misitio/clases/templates/cliente.html
@@ -10,16 +10,16 @@
         <table>
             <thead>
                 <tr>
-                    <th>Course Description</th>
-                    <th>Credits</th>
+                    <th>Numero Id</th>
+                    <th>Primer nombre</th>
                 </tr>
             </thead>
             <tbody>
-                 {% for cliente in object_list %}
-                    <li>{{ cliente.primeroNombre }} :
-                    <a href="{% url "cliente" cliente.numeroId %}">{{ cliente.pages }}</a>
-                    <a href="{% url "cliente" cliente.numeroId  %}">delete</a>
-                    </li>
+                 {% for clientes in object_list %}
+                 <tr  href="{{ clientes.primeroNombre }} :">
+                    <td class="crsDesc">{{ clientes.numeroId }}</td><td class="CrsUnits">{{ clientes.primeroNombre }}</td>
+                    
+                    </tr>
                 {% endfor %}
             </tbody>
         </table>
