Ajuste de todas las columnas en las tablas, hay que trabajar en insertado multiple de tablas y en tablaChofer hay que hacer multiples inserts

--- a/misitio/clases/templates/cliente.html
+++ b/misitio/clases/templates/cliente.html
@@ -23,9 +23,12 @@
         <table>
             <thead>
                 <tr>
-                    <th>Numero Id</th>
-                    <th>Primer nombre</th>
-                    <th>Segundo nombre</th>
+                    <th>Identificacion</th>
+                    <th>Nombres</th>
+                    <th>Apellidos</th>
+                    <th>Direccion</th>
+                    <th>Celular</th>
+                    <th>Detalle</th>
                 </tr>
             </thead>
             <tbody> 
@@ -38,5 +41,6 @@
                 -->
             </tbody>
         </table>
+        <button type="submit">Guardar</button>
     </body>
 </html>
