--- a/misitio/clases/templates/cliente.html
+++ b/misitio/clases/templates/cliente.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="{{STATIC_URL}}css/style.css" />
 <script>dojoConfig = {async: true, parseOnLoad: true}</script>
 <script src='{{STATIC_URL}}js/dojo-release-1.10.4/dojo/dojo.js'></script>
+<script src='{{STATIC_URL}}js/dojo-release-1.10.4/dijit/form/Button.js'></script>
 <script src='{{STATIC_URL}}js/dojo-release-1.10.4/dojox/grid/DataGrid.js'></script>
 <!-- Importacion para el dojo dialog form--> 
 <script>
@@ -124,16 +125,12 @@ require(["dojox/grid/DataGrid","dojo/data/ItemFileWriteStore","dijit/form/Button
 
 <div class="grilla">
 <div class="bajar" >
-<div data-dojo-type="dijit.form.Button">
+
+  <button id="addRow" data-dojo-type="dijit/form/Button" >
     Agregar Fila
-    <script type="dojo/method" data-dojo-event="onClick" data-dojo-args="evt">
-        // set the properties for the new item:
-        // Insert the new item into the store:
-        // (we use store3 from the example above in this example)
-        store.newItem(myNewItem);
-    </script>
-</div>
-        <button data-dojo-type="dijit/form/Button" type="button" onClick="myFormDialog.hide()">
+  </button>
+
+        <button data-dojo-type="dijit/form/Button" >
             Guardar
         </button>
 </div>
