--- a/misitio/clases/templates/cliente.html
+++ b/misitio/clases/templates/cliente.html
@@ -55,7 +55,7 @@ require(["dojox/grid/DataGrid","dojo/data/ItemFileWriteStore","dijit/form/Button
     execute="alert('submitted w/args:\n' + dojo.toJson(arguments[0], true));">
 <div class="dijitDialogPaneContentArea">
 
-<form>
+<form method="post"> {%csrf_token%}
 <div id="flotante">
 <div class="izquierdad">
  <legend  style="font-weight: bold;">Datos del cliente (Dueño del vehiculo)</legend>
@@ -63,27 +63,27 @@ require(["dojox/grid/DataGrid","dojo/data/ItemFileWriteStore","dijit/form/Button
 
 <div>
   <label for="tipi">Tipo de identificacion: </label>
-  <input data-dojo-type="dijit/form/TextBox" type="text" name="tipi" id="tipi">
+  {{form.TipoIdentificacion}}
 </div>
 
 <div>
   <label for="pnom">Primer nombre: </label>
-  <input data-dojo-type="dijit/form/TextBox" type="text" name="pnom" id="pnom">
+    {{form.primeroNombre}}
 </div>
 
 <div>
   <label for="snom">Segundo nombre: </label>
-  <input data-dojo-type="dijit/form/DateTextBox" data-dojo-id="myStartDate" onChange="myEndDate.constraints.min = arguments[0];" type="text" name="sdate" id="snom">
+    {{form.segunNombre}}
 </div>
  
 <div>
   <label for="papellido">Primer apellido: </label>
-  <input type="password" id="contrasena" />
+  {{form.primeroApellido}}
 </div>
 
 <div>
   <label for="sapellido">Segundo apellido: </label>
-  <input data-dojo-type="dijit/form/DateTextBox" data-dojo-id="myEndDate" onChange="myStartDate.constraints.max = arguments[0];" type="text" name="papellido" id="papellido">
+  {{form.segundoApellido}}
 </div>
 
 </div>
@@ -91,28 +91,24 @@ require(["dojox/grid/DataGrid","dojo/data/ItemFileWriteStore","dijit/form/Button
 
 
 <div class="derecha">
- <div>
-  <label for="desc">Description: </label>
-  <input data-dojo-type="dijit/form/TextBox" type="text" name="desc" id="desc">
-</div>
 <div>
   <label for="nide">Numero Id </label>
-  <input data-dojo-type="dijit/form/TextBox" type="text" name="nide" id="nide">
+  {{form.numeroId}}
 </div>
 
 <div>
   <label for="dir">Direccion: </label>
-  <input data-dojo-type="dijit/form/TextBox" type="text" name="dir" id="dir">
+  {{form.direccion}}
 </div>
 
 <div>
   <label for="detail">Detalle: </label>
-  <input data-dojo-type="dijit/form/TextBox" type="text" name="detal" id="detal">
+   {{form.detalles}}
 </div>
  
 <div>
   <label for="cel">Celular: </label>
-  <input data-dojo-type="dijit/form/TextBox" type="text" name="cel" id="cel">
+  {{form.celular}}
 </div>
 </div>
 </div>
@@ -130,7 +126,7 @@ require(["dojox/grid/DataGrid","dojo/data/ItemFileWriteStore","dijit/form/Button
     Agregar Fila
   </button>
 
-        <button data-dojo-type="dijit/form/Button" >
+        <button data-dojo-type="dijit/form/Button"  type="submit" >
             Guardar
         </button>
 </div>
