--- a/misitio/clases/templates/cliente.html
+++ b/misitio/clases/templates/cliente.html
@@ -7,17 +7,20 @@
 <script src='{{STATIC_URL}}js/dojo-release-1.10.4/dojo/dojo.js'></script>
 <script src='{{STATIC_URL}}js/dojo-release-1.10.4/dijit/form/Button.js'></script>
 <script src='{{STATIC_URL}}js/dojo-release-1.10.4/dojox/grid/DataGrid.js'></script>
+<!--<script src="{{STATIC_URL}}/js/ajax.js" type="text/javascript"></script>-->
+<script src="{{STATIC_URL}}/js/jquery.js"></script>
+<!--<script src="{{STATIC_URL}}/js/rango-ajax.js"></script>-->
 <!-- Importacion para el dojo dialog form--> 
 <script>
 require(["dojo/parser", "dijit/Dialog", "dijit/form/Button", "dijit/form/TextBox", "dijit/form/DateTextBox", "dijit/form/TimeTextBox"]);
 </script>
 
 <!-- Importacion para el dojo menu bar--> 
- <script>
+<script>
 require(["dojo/parser", "dijit/MenuBar", "dijit/MenuBarItem", "dijit/PopupMenuBarItem","dijit/DropDownMenu", "dijit/MenuItem"]);
- </script>
+</script>
 <!-- tabla y agregar evento en tabla--> 
- <script>
+<script>
 require(["dojox/grid/DataGrid","dojo/data/ItemFileWriteStore","dijit/form/Button"]);
 </script>
 
@@ -29,13 +32,6 @@ require(["dojox/grid/DataGrid","dojo/data/ItemFileWriteStore","dijit/form/Button
 </script>
 
 <script type="text/javascript">
-    dojo.require("dojo.event.*");       // sophisticated AOP event handling
-    dojo.require("dojo.io.*");          // for Ajax requests
-    dojo.require("dojo.json");          // serialization to JSON
-</script>
-
-<script type="text/javascript" src="{{STATIC_URL}}js/ajax.js">
-    alert("Algo increible acabo de ocurrir")
 </script>
 
 <style type="text/css">
@@ -72,7 +68,7 @@ require(["dojox/grid/DataGrid","dojo/data/ItemFileWriteStore","dijit/form/Button
     execute="alert('submitted w/args:\n' + dojo.toJson(arguments[0], true));">
 <div class="dijitDialogPaneContentArea">
 
-<form method="post"> {%csrf_token%}
+<form id="xForm" method="post"> {%csrf_token%}
 <div id="flotante">
 <div class="izquierdad">
  <legend  style="font-weight: bold;">Datos del cliente (Dueño del vehiculo)</legend>
@@ -93,17 +89,18 @@ require(["dojox/grid/DataGrid","dojo/data/ItemFileWriteStore","dijit/form/Button
 
 <div>
   <label for="snom">Segundo nombre: </label>
-    {{form.segunNombre}}
+      <!--{{form.segunNombre}}-->
 </div>
  
 <div>
   <label for="papellido">Primer apellido: </label>
-  {{form.primeroApellido}}
+  <input type="text" name="pape" value="" id="pape"></input>
+  <!--{{form.primeroApellido}}-->
 </div>
 
 <div>
   <label for="sapellido">Segundo apellido: </label>
-  {{form.segundoApellido}}
+  <!--{{form.segundoApellido}}-->
 </div>
 
 </div>
@@ -119,17 +116,19 @@ require(["dojox/grid/DataGrid","dojo/data/ItemFileWriteStore","dijit/form/Button
 
 <div>
   <label for="dir">Direccion: </label>
-  {{form.direccion}}
+    <input type="text" name="dir" value="" id="dir"></input>
+  <!--{{form.direccion}}-->
 </div>
 
 <div>
   <label for="detail">Detalle: </label>
-   {{form.detalles}}
+   <!--{{form.detalles}}-->
 </div>
  
 <div>
   <label for="cel">Celular: </label>
-  {{form.celular}}
+   <input type="text" name="cel" value="" id="cel"></input>
+  <!--{{form.celular}}-->
 </div>
 </div>
 </div>
@@ -147,7 +146,7 @@ require(["dojox/grid/DataGrid","dojo/data/ItemFileWriteStore","dijit/form/Button
     Agregar Fila
   </button>
 
-        <button id="guardar" data-dojo-type="dijit/form/Button"  type="submit" >
+        <button data-dojo-type="dijit/form/Button"  type="submit" >
             Guardar
         </button>
 </div>
