Estamo guardando con dojo! no se recarga, el servidor no bota errores, el botton tiene su css, pero sale un error en la consola javascrip del cliente que por el momento no me interesa ahora hay que darle carpinteria

--- a/misitio/clases/templates/cliente.html
+++ b/misitio/clases/templates/cliente.html
@@ -146,7 +146,7 @@ require(["dojox/grid/DataGrid","dojo/data/ItemFileWriteStore","dijit/form/Button
     Agregar Fila
   </button>
 
-        <button id="boton01">
+        <button id="guardar" data-dojo-type="dijit/form/Button">
             Guardar
         </button>
 
