--- a/misitio/clases/static/css/style.css
+++ b/misitio/clases/static/css/style.css
@@ -11,9 +11,8 @@
 .grilla{height: 1em;width: 34em;}
 .izquierda {float:left;width: 45%;clear: left;padding:0}
 .derecha {float:right;width: 45%;clear: right;padding:0}
-.espacio{height: 15em;width: 3em}
-.bajarq{ ;margin-top:50px;}
-/*.bajar{float:right;border: 2px solid #aeaeae;margin-top:10px;height: 30px;width: 300px;}*/
+.espacio{height: 5em;width: 2em}
+.bajarq{ margin-top:10px;}
 .bajar{}
 
 
