--- a/misitio/clases/templates/cliente.html
+++ b/misitio/clases/templates/cliente.html
@@ -5,24 +5,10 @@
 <link rel="stylesheet" href="{{STATIC_URL}}css/style.css" />
 <script>dojoConfig = {async: true, parseOnLoad: true}</script>
 <script src='{{STATIC_URL}}js/dojo-release-1.10.4/dojo/dojo.js'></script>
-<script src='{{STATIC_URL}}js/dojo-release-1.10.4/dijit/form/Button.js'></script>
-<script src='{{STATIC_URL}}js/dojo-release-1.10.4/dojox/grid/DataGrid.js'></script>
 <!--<script src="{{STATIC_URL}}/js/ajax.js" type="text/javascript"></script>-->
-<script src="{{STATIC_URL}}/js/jquery.js"></script>
+
 <!--<script src="{{STATIC_URL}}/js/rango-ajax.js"></script>-->
 <!-- Importacion para el dojo dialog form--> 
-<script>
-require(["dojo/parser", "dijit/Dialog", "dijit/form/Button", "dijit/form/TextBox", "dijit/form/DateTextBox", "dijit/form/TimeTextBox"]);
-</script>
-
-<!-- Importacion para el dojo menu bar--> 
-<script>
-require(["dojo/parser", "dijit/MenuBar", "dijit/MenuBarItem", "dijit/PopupMenuBarItem","dijit/DropDownMenu", "dijit/MenuItem"]);
-</script>
-<!-- tabla y agregar evento en tabla--> 
-<script>
-require(["dojox/grid/DataGrid","dojo/data/ItemFileWriteStore","dijit/form/Button"]);
-</script>
 
 <script type="text/javascript">
     djConfig = {
@@ -48,154 +34,6 @@ require(["dojox/grid/DataGrid","dojo/data/ItemFileWriteStore","dijit/form/Button
 <title>Clientes</title>
 </head>
 <body class="claro">
-
-
-
-<!-- Este es el codigo del menu bar-->
-<div data-dojo-type="dijit/MenuBar" id="navMenu">
-    <div data-dojo-type="dijit/PopupMenuBarItem">
-        <span>Inicio</span>
-        <div data-dojo-type="dijit/DropDownMenu" id="fileMenu">
-            <div data-dojo-type="dijit/MenuItem" data-dojo-props="onClick:function(){myFormDialog.show();}">Cliente</div>
-            <div data-dojo-type="dijit/MenuItem" data-dojo-props="onClick:function(){alert('file 2');}">Historia de vehiculo</div>
-            <div data-dojo-type="dijit/MenuItem" data-dojo-props="onClick:function(){alert('file 2');}">Busqueda historial de vehiculos</div>
-        </div>
-    </div>
-</div>
-<!-- Este es el codigo del menu bar-->
-
-<!-- Aca empieza el Dialogform-->
-<div data-dojo-type="dijit/Dialog" data-dojo-id="myFormDialog" title="Cliente" style="width: 1100px;"
-    execute="alert('submitted w/args:\n' + dojo.toJson(arguments[0], true));">
-<div class="dijitDialogPaneContentArea">
-
-<form > 
-<div id="flotante">
-<div class="izquierdad">
- <legend  style="font-weight: bold;">Datos del cliente (Dueño del vehiculo)</legend>
-<div class="izquierda">
-
-<div>
-  <label for="tipi">Tipo de identificacion: </label>
- 
-<!--<input data-dojo-type="dijit/form/ValidationTextBox" title="Tipo de identificacion:" name="tipi" data-dojo-props="required: true"></input>-->
-<input id="stateSelect">
-</div>
-
-<div>
-  <label for="pnom">Primer nombre: </label>
-    <!--{{form.primeroNombre}}-->
-    <input type="text" name="pnom" value="" id="pnom"></input>
-</div>
-
-<div>
-  <label for="snom">Segundo nombre: </label>
-      <!--{{form.segunNombre}}-->
-      <input type="text" name="snom" value="" id="snom"></input>
-</div>
- 
-<div>
-  <label for="papellido">Primer apellido: </label>
-      <input type="text" name="pape" value="" id="pape"></input>
-  <!--{{form.primeroApellido}}-->
-</div>
-
-<div>
-  <label for="sapellido">Segundo apellido: </label>
-  <!--{{form.segundoApellido}}-->
-  <input type="text" name="sape" value="" id="sape"></input>
-</div>
-
-</div>
-
-
-
-<div class="derecha">
-<div>
-  <label for="nide">Numero Id </label>
-  <!--{{form.numeroId}}-->
-  <input type="text" name="numid" value="" id="numid"></input>
-</div>
-
-<div>
-  <label for="dir">Direccion: </label>
-    <input type="text" name="dir" value="" id="dir"></input>
-  <!--{{form.direccion}}-->
-</div>
-
-<div>
-  <label for="detail">Detalle: </label>
-  <input type="text" name="deta" value="" id="deta"></input>
-   <!--{{form.detalles}}-->
-</div>
- 
-<div>
-  <label for="cel">Celular: </label>
-   <input type="text" name="cel" value="" id="cel"></input>
-  <!--{{form.celular}}-->
-</div>
-</div>
-</div>
-
-<div class="espacio">
-
-</div>
-
-
-
-<div class="grilla">
-<div class="bajar" >
-
-  <button id="addRow" data-dojo-type="dijit/form/Button" >
-    Agregar Fila
-  </button>
-
-  <button id="guardar" data-dojo-type="dijit/form/Button">
-    Guardar
-  </button>
-
-
-</div>
-<div class="bajarq">
-<div id="gridDiv" ></div>
-</div>
-</div>
-
-</div>
-</form>
-
-
-    <!--
-        <table>
-            <tr>
-                <td><label for="tipi">Tipo de identificacion: </label></td>
-                <td><input data-dojo-type="dijit/form/TextBox" type="text" name="tipi" id="tipi"></td>
-            </tr>
-            <tr>
-                <td><label for="pnom">Primer nombre: </label></td>
-                <td><input data-dojo-type="dijit/form/TextBox" type="text" name="pnom" id="pnom"></td>
-            </tr>
-            <tr>
-                <td><label for="snom">Segundo nombre: </label></td>
-                <td><input data-dojo-type="dijit/form/DateTextBox" data-dojo-id="myStartDate" onChange="myEndDate.constraints.min = arguments[0];" type="text" name="sdate" id="snom"></td>
-            </tr>
-            <tr>
-                <td><label for="papellido">Primer apellido: </label></td>
-                <td><input data-dojo-type="dijit/form/DateTextBox" data-dojo-id="myEndDate" onChange="myStartDate.constraints.max = arguments[0];" type="text" name="papellido" id="papellido"></td>
-            </tr>
-            <tr>
-                <td><label for="sapellido">Segundo apellido: </label></td>
-                <td><input data-dojo-type="dijit/form/TimeTextBox" type="text" name="sapellido" id="sapellido"></td>
-            </tr>
-            <tr>
-                <td><label for="desc">Description: </label></td>
-                <td><input data-dojo-type="dijit/form/TextBox" type="text" name="desc" id="desc"></td>
-            </tr>
-        </table>
-    -->
-    
-</div>
-<!-- Aca termina el Dialogform-->
-
+<div id="wrapper"></div>
 </body>
 </html>
