--- a/misitio/clases/templates/cliente.html
+++ b/misitio/clases/templates/cliente.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="stylesheet" href="{{STATIC_URL}}js/dojo-release-1.10.4/dijit/themes/claro/claro.css">
 <link rel="stylesheet" href="{{STATIC_URL}}css/style.css" />
+<link rel="stylesheet" href="{{STATIC_URL}}css/styleh.css" />
 <script>dojoConfig = {async: true, parseOnLoad: false}</script>
 <script src='{{STATIC_URL}}js/dojo-release-1.10.4/dojo/dojo.js'></script>
 <!--<script src="{{STATIC_URL}}/js/ajax.js" type="text/javascript"></script>-->
@@ -35,5 +36,6 @@
 </head>
 <body class="claro">
 <div id="wrapper"></div>
+
 </body>
 </html>
