correccion con problema de conflicto en css

--- a/misitio/clases/static/css/styleh.css
+++ b/misitio/clases/static/css/styleh.css
@@ -9,15 +9,10 @@
 .izquierdahb{float:right;width: 20%;clear: left;padding:0;}
 .izquierdahhb{float:right;width: 20%;clear: left;padding:0;}
 .izquierdahhhb{float:right;width: 20%;clear: left;padding:0;}
-.espacio{float:right;width: 29.2em;height: 1em;clear: left;}
+.espaciox{float:right;width: 29.2em;height: 1em;clear: left;}
 
 
 
-#gridDivh {
-	float:left;
-    height: 20em;
-    width: 100%;
-}
 
 .agrrow{float:left;width: 5em;height: 3em;padding:0;}
 
