--- a/misitio/clases/templates/cliente.html
+++ b/misitio/clases/templates/cliente.html
@@ -24,11 +24,19 @@
 <style type="text/css">
 @import "{{STATIC_URL}}js/dojo-release-1.10.4/dojox/grid/resources/claroGrid.css";
 
+
 /*Grid needs an explicit height by default*/
 #gridDiv {
     height: 13em;
     width: 40em;
 }
+
+#gridDivhh {
+	float:left;
+    height: 20em;
+    width: 100%;
+}
+
     </style>
 
 <script src='{{STATIC_URL}}js/datagrid.js'></script>
