actualizar grilla buscadora de chofer-- jsonrest

--- a/misitio/clases/templates/cliente.html
+++ b/misitio/clases/templates/cliente.html
@@ -38,6 +38,12 @@
     width: 100%;
 }
 
+#gridDivc {
+	float:left;
+    height: 20em;
+    width: 100%;
+}
+
     </style>
 
 <script src='{{STATIC_URL}}js/datagrid.js'></script>
