arreglando grilla de seleccion para chofer: consulta de acuerdo al dueno escogido

--- a/misitio/clases/templates/cliente.html
+++ b/misitio/clases/templates/cliente.html
@@ -38,6 +38,12 @@
     width: 100%;
 }
 
+#gridDivd {
+	float:left;
+    height: 20em;
+    width: 100%;
+}
+
 #gridDivc {
 	float:left;
     height: 20em;
